Creates RollupGrouping__mdt custom metadata type to allow multiple rollup operations to roll up to the same field

--- a/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -184,6 +184,10 @@
                 <behavior>Edit</behavior>
                 <field>ShouldRunWithoutCustomSettingEnabled__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>RollupGrouping__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -267,7 +271,7 @@
         <customLabel>true</customLabel>
         <detailHeading>true</detailHeading>
         <editHeading>true</editHeading>
-        <label>Deprecated</label>
+        <label>Deprecated - Use The Rollup Order By child CMDT records instead</label>
         <layoutColumns>
             <layoutItems>
                 <behavior>Readonly</behavior>
