Adds Rollup__mdt related list to RollupGrouping__mdt layout

--- a/rollup/core/layouts/RollupGrouping__mdt-Rollup Grouping Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupGrouping__mdt-Rollup Grouping Layout.layout-meta.xml
@@ -47,15 +47,37 @@
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
     <layoutSections>
-        <customLabel>false</customLabel>
-        <detailHeading>false</detailHeading>
+        <customLabel>true</customLabel>
+        <detailHeading>true</detailHeading>
         <editHeading>false</editHeading>
+        <label>Custom Links</label>
+        <layoutColumns/>
+        <layoutColumns/>
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
+    <relatedLists>
+        <fields>MasterLabel</fields>
+        <fields>DeveloperName</fields>
+        <fields>CalcItem__c</fields>
+        <fields>CalcItemText__c</fields>
+        <fields>RollupFieldOnCalcItem__c</fields>
+        <fields>RollupFieldOnCalcItemText__c</fields>
+        <fields>RollupOperation__c</fields>
+        <fields>CalcItemWhereClause__c</fields>
+        <relatedList>Rollup__mdt.RollupGrouping__c</relatedList>
+        <sortField>DeveloperName</sortField>
+        <sortOrder>Asc</sortOrder>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
+    <summaryLayout>
+        <masterLabel>00h8G0000062UAb</masterLabel>
+        <sizeX>4</sizeX>
+        <sizeY>0</sizeY>
+        <summaryLayoutStyle>Default</summaryLayoutStyle>
+    </summaryLayout>
 </Layout>
