Fixes broken formatting from #9616b011d872aa150fde6c60eb0124a4a57bcd0b via @ssk42, adds RollupControl__mdt.ShouldOptimizeCMDTQueries__c to Rollup Control layout, and adds documentation for it to the README

--- a/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -93,6 +93,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>ShouldOptimizeCMDTQueries__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>ShouldSkipResettingParentFields__c</field>
             </layoutItems>
         </layoutColumns>
