Correctly adds text-based override for Ultimate Lookup rollup field to Rollup__mdt layout

--- a/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
+++ b/rollup/core/layouts/Rollup__mdt-Rollup Layout.layout-meta.xml
@@ -196,6 +196,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>UltimateParentLookupText__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>ConcatDelimiter__c</field>
             </layoutItems>
             <layoutItems>
