Adds RollupControl__mdt.ShouldUseJSONSerializationStrateg__c to enable subscribers to control whether or not Dataweave is used when Rollup State records are getting deserialized

--- a/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
+++ b/rollup/core/layouts/RollupControl__mdt-Rollup Control Layout.layout-meta.xml
@@ -77,6 +77,10 @@
                 <behavior>Edit</behavior>
                 <field>MaxRollupRetries__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>ShouldUseJSONSerializationStrategy__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
